add img and link

--- a/index.html
+++ b/index.html
@@ -14,15 +14,36 @@
 
     </div>
     <hr>
-    <div>
+    <div class="address">
         <address>
             <strong>Gert Cauwenberghs</strong> <br />
             CLSP, ECE Dept. <br />
             Johns Hopkins University <br />
             Baltimore, MD 21218 <br />
             <a href="mailto:gert@jhu.edu">gert@jhu.edu</a>
-        </address><br />
-        
+        </address>
+
+    </div><br />
+    <div class="ol">
+        <h3>Abstract</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis natus quis nulla et sed excepturi sint, sapiente vero repellat nihil cupiditate tenetur quo eligendi similique iure veritatis laboriosam! Fugit, voluptate!</p>
+
+        <ol>
+            <li><strong>Introduction</strong>
+
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis commodi ab aspernatur esse eos omnis, magnam assumenda dolorem asperiores reiciendis, temporibus incidunt reprehenderit placeat minus, officia exercitationem doloribus ea tenetur!</p>
+        </li>
+        </ol>
+    </div>
+    <div class="img">
+        <img src="./img/optimal-hyperplane.png" alt="grafico">
+
+    </div>
+    <div class="link">
+
+        <a href="https://it.wikipedia.org/wiki/Pagina_principale">Go to Wikipedia to know more</a>
+
+
     </div>
 </body>
 
